--- a/app/src/main/res/layout/layout_store.xml
+++ b/app/src/main/res/layout/layout_store.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00F7F2F2"
+    android:id="@+id/single_category_container"
     tools:context=".MainActivity">
 
     <include
         android:id="@+id/inc_layout_store_categories_recycler"
         layout="@layout/layout_store_categories_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--<ViewStub
+        android:id="@+id/vstub_layout_store_single_category"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout="@layout/layout_store_single_category"/>-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
