--- a/app/src/main/res/layout/layout_product_mini_desc.xml
+++ b/app/src/main/res/layout/layout_product_mini_desc.xml
@@ -12,16 +12,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <online.merkatos.prexocertoonline.model_views.CustomImageView
-            android:id="@+id/imageView5"
-            android:layout_width="92dp"
+            android:id="@+id/productImage"
+            android:layout_width="96dp"
             android:layout_height="80dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars[0]" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/productName"
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginStart="4dp"
@@ -32,57 +33,46 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+            app:layout_constraintTop_toBottomOf="@+id/productImage" />
 
         <TextView
             android:id="@+id/productPrice"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="18dp"
             android:layout_marginStart="4dp"
             android:gravity="center_vertical"
-            android:text="100 EUR"
+            android:singleLine="true"
+            android:text="EUR100.00"
+            android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-            app:layout_constraintEnd_toStartOf="@+id/imageView6"
+            app:layout_constraintEnd_toEndOf="@+id/productName"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView6" />
+            app:layout_constraintTop_toBottomOf="@+id/productName" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/productWishs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            app:srcCompat="@drawable/ic_more_vert_black_24dp" />
-
-        <ImageView
-            android:id="@+id/prodWishs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/wishsCounter"
             app:layout_constraintTop_toBottomOf="@+id/productPrice"
             app:srcCompat="@drawable/ic_heart_outline_24px" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="0dp"
+            android:id="@+id/wishsCounter"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:gravity="center_vertical"
-            android:text="999"
+            android:text="999+"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/prodWishs"
+            app:layout_constraintBottom_toBottomOf="@+id/productWishs"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/prodWishs"
-            app:layout_constraintTop_toTopOf="@+id/prodWishs" />
+            app:layout_constraintTop_toTopOf="@+id/productWishs" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
