--- a/app/src/main/res/layout/layout_store_manager_profile.xml
+++ b/app/src/main/res/layout/layout_store_manager_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,6 +20,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout="@layout/layout_store_manager_registry"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ViewStub
+        android:id="@+id/vstub_layout_profile_summary"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout="@layout/layout_profile_summary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
