--- a/app/src/main/res/layout/layout_store_single_category.xml
+++ b/app/src/main/res/layout/layout_store_single_category.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,16 +35,15 @@
                 android:gravity="center_vertical"
                 android:paddingStart="16dp"
                 android:text="Category header"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textColor="@android:color/darker_gray"
+                android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/moreInThisCategoryArrow"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.2"
                 android:background="@color/cardview_light_background"
-                android:paddingTop="8dp"
                 android:paddingEnd="16dp"
                 android:scaleType="fitStart"
                 app:srcCompat="@drawable/ic_arrow_forward_gray_24dp" />
